Some tweaks to the manual tests.

--- a/manualtests/widgets/autosuggest/index.html
+++ b/manualtests/widgets/autosuggest/index.html
@@ -64,7 +64,7 @@
 		
 		<div class="sandbox">
 			<form action="#" onsubmit="alert('submit: '+this.colornames1.value); return false;">
-			<p>Try it: <input type="text" id="colornames1" /> (type the name of a web-safe colour delimited with spaces)</p>
+			<p>Try it: <input type="text" id="colornames1" autocomplete="false" /> (type the name of a web-safe colour delimited with spaces)</p>
 			</form>
 		</div>
 	</div>
@@ -98,7 +98,7 @@
 		
 		<div class="sandbox">
 			<form action="#" onsubmit="alert('submit: '+this.colornames2.value); return false;">
-			<p>Try it: <input type="text" id="colornames2" /> (type the name of a web-safe colour)</p>
+			<p>Try it: <input type="text" id="colornames2" value="" autocomplete="false" /> (type the name of a web-safe colour)</p>
 			</form>
 		</div>
 	</div>
