Internationalisation module, internationalised Widgets and small helpful addition to dom.create

--- a/test/index.html
+++ b/test/index.html
@@ -33,6 +33,7 @@
 		'glow/tweens/tweens.js',
 		'glow/anim/anim.js',
 		'glow/embed/embed.js',
+		'glow/i18n/i18n.js',
 		'glow/widgets/autosuggest/autosuggest.js',
 		'glow/forms/forms.js',
 		'glow/widgets/slider/slider.js',
