--- a/manualtests/widgets/carousel/index.html
+++ b/manualtests/widgets/carousel/index.html
@@ -22,21 +22,7 @@
 	<style type="text/css">
 		#carousel1 li {
 		    background: #fff;
-			width: 120px;
-			height: 90px;
 			margin: 4px;
-		}
-		#carousel2 li {
-		    background: #fff;
-		    width: 100px;
-			height: 73px;
-			margin: 4px;
-		}
-		#carousel3 li {
-		    background: #fff;
-		    width: 100px;
-			height: 73px;
-			margin: 20px 10px;
 		}
 		img {
 			display: block;
@@ -87,90 +73,78 @@
 				loop: true
 			}
 		);
+		glow.events.addListener(carousel1, "itemClick", function(e) {
+			manualTests.log('carousel1: itemClick, item ' + e.itemIndex + '');
+			return false;
+		});
+		glow.events.addListener(carousel1, "scroll", function(e) {
+			manualTests.log('carousel1: scroll');
+		});
+		glow.events.addListener(carousel1, "afterScroll", function(e) {
+			manualTests.log('carousel1: afterScroll');
+		});
 	});
 	// ]]>
 	</script>
 	
-	<!--
-	<div class="example">
-		<h2>Carousel with vertical, looping, sliding and dark theme</h2>
-		<p>no description</p>
-		
-		<script type="text/javascript" class="showSrc">
-		// <![CDATA[
-		glow.ready(function() {
-			window.carousel2 = new glow.widgets.Carousel("#carousel2",{
-				loop: true,
-				slideOnScroll: true,
-				size: 4,
-				step: 4,
-				theme: "dark",
-				vertical: true,
-				pageNav: true
-			});
-		});
-		// ]]>
-		</script>
-		
-		<div class="sandbox">
-			<ol id="carousel2">
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_one.gif" alt="BBC One" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_two.gif" alt="BBC Two" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_three.gif" alt="BBC Three" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_four.gif" alt="BBC Four" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_hd.gif" alt="BBC HD" width="100" height="32" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/cbbc.gif" alt="CBBC" width="100" height="62" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/cbeebies.gif" alt="CBeebies" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/news.gif" alt="BBC News" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/parliament.gif" alt="BBC Parliament" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_1.gif" alt="Radio 1" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_2.gif" alt="Radio 2" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_3.gif" alt="Radio 3" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_4.gif" alt="Radio 4" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/five_live.gif" alt="Five Live" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/6_music.gif" alt="6Music" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_7.gif" alt="BBC 7" width="100" height="56" /></li>
-			</ol>
-		</div>
-	</div>
+	<h2>Non-looping slidering carousel</h2>
 	
-	<div class="example">		
-		<h2>Carousel with navigation, using moveBy()</h2>
-		<p>CSS is used to apply a heavy gray border around the carousel items.</p>
-		
-		<script type="text/javascript" class="showSrc">
-		// <![CDATA[
-		glow.ready(function() {
-			window.carousel3 = new glow.widgets.Carousel("#carousel3",{
+	<p>
+		This carousel features a continuous sliding animation when the mouse is
+		held down on it, and doesn't loop.
+	</p>
+	
+	<ul>
+		<li>Clicking the left &amp; right arrows should move the carousel in the expected direction by 1 item</li>
+		<li>You should not be able to scroll forward past the final "One", or backward past the first "One"</li>
+		<li>The back / forward buttons should appear to be disabled when they cannot be used</li>
+		<li>Holding down the next / prev buttons should move the carousel forward 1 step, then smoothly move until the mouse is released</li>
+	</ul>
+	
+	<ol id="carousel2">
+		<li><a href="#"><img src="images/1-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/2-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/3-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/4-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/5-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/6-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/7-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/8-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/7-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/6-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/5-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/4-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/3-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/2-item.jpg" alt="" width="120" height="90" /></a></li>
+		<li><a href="#"><img src="images/1-item.jpg" alt="" width="120" height="90" /></a></li>
+	</ol>
+	
+	<script type="text/javascript" class="showSrc">
+	// <![CDATA[
+	glow.ready(function() {
+		window.carousel2 = new glow.widgets.Carousel(
+			"#carousel2",
+			{
 				size: 3,
-				pageNav: true
-			}).moveBy(6);
+				step: 1,
+				slideOnScroll: true
+			}
+		);
+		glow.events.addListener(carousel2, "itemClick", function(e) {
+			manualTests.log('carousel2: itemClick, item ' + e.itemIndex);
+			return false;
 		});
-		// ]]>
-		</script>
-		
-		<div class="sandbox">
-			<ol id="carousel3">
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_one.gif" alt="BBC One" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_two.gif" alt="BBC Two" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_three.gif" alt="BBC Three" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_four.gif" alt="BBC Four" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_hd.gif" alt="BBC HD" width="100" height="32" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/cbbc.gif" alt="CBBC" width="100" height="62" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/cbeebies.gif" alt="CBeebies" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/news.gif" alt="BBC News" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/parliament.gif" alt="BBC Parliament" width="100" height="73" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_1.gif" alt="Radio 1" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_2.gif" alt="Radio 2" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_3.gif" alt="Radio 3" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/radio_4.gif" alt="Radio 4" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/five_live.gif" alt="Five Live" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/6_music.gif" alt="6Music" width="100" height="56" /></li>
-				<li><img src="http://www.bbc.co.uk/ui/ide/1/images/brand/100/bbc_7.gif" alt="BBC 7" width="100" height="56" /></li>
-			</ol>
-		</div>
-	</div>
-	-->
+		glow.events.addListener(carousel2, "scroll", function(e) {
+			manualTests.log('carousel2: scroll');
+		});
+		glow.events.addListener(carousel2, "afterScroll", function(e) {
+			manualTests.log('carousel2: afterScroll');
+		});
+	});
+	// ]]>
+	</script>
+	
+	
 	<script type="text/javascript">manualTests.showSrc()</script>
 </body>
 </html>
