--- a/manualtests/widgets/infopanel/index.html
+++ b/manualtests/widgets/infopanel/index.html
@@ -2,78 +2,77 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-	<title>InfoPanel Examples</title>
+	<title>glow.widgets.InfoPanel</title>
+	<script type="text/javascript" src="../../includes/manualtests.js"></script>
+	<!-- loading gloader, to change the location of gloader, edit manualtests.js -->
+	<script type="text/javascript">// <![CDATA[
+		document.write(
+			'<script type="text/javascript" src="' + manualTests.config.gloaderPath + '"> \
+				gloader.use("glow", { \
+					$map:  manualTests.config.mapPath, \
+					$base: manualTests.config.basePath \
+				}); \
+			<' + '/script>'
+		);
+	// ]]></script>
 	
-	<style type="text/css" media="screen">
-		#help {
-			cursor: help;
+	<script type="text/javascript">gloader.load(['glow', '@VERSION@', 'glow.widgets.InfoPanel'])</script>
+	
+	<style type="text/css">
+		#infoPanelField1 {
+			margin-left: 400px;
 		}
 	</style>
-	
-	<!-- assumes gloader project folder is next to glow project folder -->
-	<script type="text/javascript" src="../../../../gloader/src/gloader.js">
-		gloader.use(
-			"glow",
-			{
-				$map:  "../../../srcloader/map.js",
-				$base: "../../../src/"
-			}
-		);
-	</script>
-	
-	<script type="text/javascript">
-		gloader.load(
-			['glow', '@VERSION@', 'glow.widgets.InfoPanel']
-		);
-	</script>
 </head>
 
 <body>
-	<h1>glow.widgets.InfoPanel examples</h1>
+	<h1>glow.widgets.InfoPanel</h1>
 	
-	<div class="example">	
-		<h2>Basic InfoPanel</h2>
-		<p>Clicking on the label for the Search field below should cause an info panel to appear.</p>
-		
-		<script type="text/javascript" class="showSrc">
-		// <![CDATA[
-		glow.ready(function() {
-			window.myInfoPanel = new glow.widgets.InfoPanel("#simpleInfoPanel", {
-				context: "#searchBox"
-			});
-			
-			glow.events.addListener(
-				"#help",
-				"click",
-				function(e) { myInfoPanel.show(); }
-			);
-		});
-		// ]]>
-		</script>
-		
-		<div class="sandbox">
-			<form action="#" method="get">
-				<p>
-					<label id="help" for="searchBox">Search:</label>
-					<input type="text" id="searchBox" name="searchBox" />
-				</p>
-			</form>
-			
-			<div id="simpleInfoPanel">
-				<h2 class="hd">Search field</h2>
-				<p>Enter a word to search for here.</p>
-			</div>
-			
-			<p>
-			Lorem ipsum clee chea saeff a. Enfreep gleepi whop heeth zogh, kucka thee shoogh ne gead ca. Hegh en, vee, fu dreati whim breest taeth ste faeck blea blea dro, plan, rae ha su koo, jooff wreap ho I gla trag ir slae ripi enmaev logher moo pog queeth I slaeing whooth bean draem, ir paers. Gu perki, ghee plae kae. Za beeing hews, bae posting ri blorling ceack wrirl, unjaeh musher fri. A, sla frashe hi; Rae bla ro I whad. Stushe I dust whea droo lae, I infrap truroer bloos troshen pi, troo cae tis, lurth gleth, precuth sea so, wu queaing see quu wha cli pla jockal cresh se la. Doopi, ches shoorl grae vaell hi jeah, op gle prega cloo, quath ke inlockall dreaw. Rea wreela, de, op, droo frae vi, furd stae du drist purth ne draing pij quoo.
-			</p>
-			
-			<p>
-			Tord hea op, wra en, zash treeb; The perbrala cheath quee taed quaen, ghor sod; Blea bu a preree, glurl unseashew neeti chee fri bree la, bagh! Gi, concroshegher cuh unsheerd bloing, stohus, ju zem. Ruv faert, ungrupi, tesum. En degleed po ir stea. Conplerth a brogs, do.
-			</p>
-		</div>
+	<h2>Basic InfoPanel</h2>
+	
+	<ul>
+		<li>Click into the form field to show the infopanel</li>
+		<li>Panel should point at the form field</li>
+		<li>Panel should appear above the select element (there's a hack to make this work for IE6)</li>
+		<li>Panel should move as the window's resized to stay in the area of the window with most space</li>
+		<li>Clicking the close button should close the panel</li>
+	</ul>
+	
+	<input type="text" value="Click to show" id="infoPanelField1" />
+	<select>
+		<option>Should show beneath InfoPanel</option>
+	</select>
+	
+	<div id="infoPanel1">
+		<h3 class="hd">InfoPanel heading</h3>
+		<p>InfoPanel content</p>
 	</div>
-
-	<script type="text/javascript" src="../../includes/js/showsrc.js"></script>
+	
+	<script type="text/javascript" class="showSrc">
+		glow.ready(function() {
+			window.infoPanel1 = new glow.widgets.InfoPanel('#infoPanel1', {
+				context: '#infoPanelField1'
+			});
+			glow.events.addListener('#infoPanelField1', 'focus', function() {
+				infoPanel1.show();
+			});
+			glow.events.addListener(infoPanel1, 'show', function() {
+				manualTests.log('infoPanel1: show');
+			});
+			glow.events.addListener(infoPanel1, 'hide', function() {
+				manualTests.log('infoPanel1: hide');
+			});
+			glow.events.addListener(infoPanel1, 'afterShow', function() {
+				manualTests.log('infoPanel1: afterShow');
+			});
+			glow.events.addListener(infoPanel1, 'afterHide', function() {
+				manualTests.log('infoPanel1: afterHide');
+			});
+		});
+	</script>
+	
+	
+	<script type="text/javascript">manualTests.showSrc();</script>
+	<script type="text/javascript">manualTests.log('Logging enabled');</script>
 </body>
 </html>
