--- a/manualtests/widgets/overlay/index.html
+++ b/manualtests/widgets/overlay/index.html
@@ -2,72 +2,127 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-	<title>Overlay Examples</title>
+	<title>glow.widgets.Overlay</title>
+	<script type="text/javascript" src="../../includes/manualtests.js"></script>
+	<!-- loading gloader, to change the location of gloader, edit manualtests.js -->
+	<script type="text/javascript">// <![CDATA[
+		document.write(
+			'<script type="text/javascript" src="' + manualTests.config.gloaderPath + '"> \
+				gloader.use("glow", { \
+					$map:  manualTests.config.mapPath, \
+					$base: manualTests.config.basePath \
+				}); \
+			<' + '/script>'
+		);
+	// ]]></script>
 	
-	<style type="text/css" media="screen">
-		#helloOverlay { background: #ccc; padding: 20px; }
+	<script type="text/javascript">gloader.load(['glow', '@VERSION@', 'glow.widgets.Overlay', 'glow.embed'])</script>
+	
+	<style type="text/css">
+		.elmToHide, .dontHide {
+			width: 22px;
+			height: 22px;
+			border: 5px solid red;
+			display: -moz-inline-box;
+			display: inline-block;
+		}
+		.dontHide, #overlay1 .elmToHide {
+			border: 5px solid green;
+		}
+		#overlay1 {
+			background: #ccc;
+			padding: 10px;
+			border: 5px solid #aaa;
+			width: 200px;
+		}
 	</style>
-	
-	<!-- assumes gloader project folder is next to glow project folder -->
-	<script type="text/javascript" src="../../../../gloader/src/gloader.js">
-		gloader.use(
-			"glow",
-			{
-				$map:  "../../../srcloader/map.js",
-				$base: "../../../src/"
-			}
-		);
-	</script>
-	
-	<script type="text/javascript">
-		gloader.load(
-			['glow', '@VERSION@', 'glow.widgets.Overlay']
-		);
-	</script>
 </head>
 
 <body>
-	<h1>glow.widgets.Overlay examples</h1>
+	<h1>glow.widgets.Overlay</h1>
 	
-	<div class="example">	
-		<h2>Basic Overlay</h2>
-		<p>no description</p>
-		
-		<script type="text/javascript" class="showSrc">
-		// <![CDATA[
-		glow.ready(function() {
-			var myOverlay = new glow.widgets.Overlay("#helloOverlay", {
-				modal: true
-			});
-			
-			glow.events.addListener(
-				glow.dom.get("#overlay-appear"),
-				"click",
-				function() {
-					myOverlay.show();
-				}
-			);
-		});
-		// ]]>
-		</script>
-		
-		<div class="sandbox">
-			<p>
-			Lorem ipsum clee chea saeff a. Enfreep gleepi whop heeth zogh, kucka thee shoogh ne gead ca. Hegh en, vee, fu dreati whim breest taeth ste faeck blea blea dro, plan, rae ha su koo, jooff wreap ho I gla trag ir slae ripi enmaev logher moo pog queeth I slaeing whooth bean draem, ir paers. Gu perki, ghee plae kae. Za beeing hews, bae posting ri blorling ceack wrirl, unjaeh musher fri. A, sla frashe hi; Rae bla ro I whad. Stushe I dust whea droo lae, I infrap truroer bloos troshen pi, troo cae tis, lurth gleth, precuth sea so, wu queaing see quu wha cli pla jockal cresh se la. Doopi, ches shoorl grae vaell hi jeah, op gle prega cloo, quath ke inlockall dreaw. Rea wreela, de, op, droo frae vi, furd stae du drist purth ne draing pij quoo.
-			</p>
-			
-			<p>
-			Make the <a href="#" id="overlay-appear" onclick="return false;">overlay appear</a>.
-			</p>
-			
-			<p>
-			Tord hea op, wra en, zash treeb; The perbrala cheath quee taed quaen, ghor sod; Blea bu a preree, glurl unseashew neeti chee fri bree la, bagh! Gi, concroshegher cuh unsheerd bloing, stohus, ju zem. Ruv faert, ungrupi, tesum. En degleed po ir stea. Conplerth a brogs, do.
-			</p>
-			
-			<div id="helloOverlay">Hello world</div>
-		</div>
+	<h2>Showing / Hiding Flash &amp; other elements</h2>
+	
+	<ul>
+		<li>Click the link below to toggle the panel</li>
+		<li>Panel should appear in the bottom-right of the view</li>
+		<li>Resize the view, ensure the panel stays in the bottom-right</li>
+		<li>Once the overlay shows, the first smiley beneath the "Toggle Overlay" link should remain, the 2nd should hide (as it may appear on top of the overlay)</li>
+		<li>Once the overlay shows, the red square beneath the "Toggle Overlay" link should hide, the green square should remain</li>
+		<li>Within the overlay, there should be a smiley &amp; a green square</li>
+	</ul>
+	
+	<p>
+		<a href="#" id="toggleOverlay1">Toggle Overlay</a>
+	</p>
+	
+	<p>
+		<span id="flash1"></span>
+		<span id="flash2"></span>
+		<span class="elmToHide"></span>
+		<span class="elmToHide dontHide"></span>
+	</p>
+	
+	<div id="overlay1">
+		Overlay 1
+		<span id="flash3"></span>
+		<span class="elmToHide"></span>
 	</div>
-
-	<script type="text/javascript" src="../../includes/js/showsrc.js"></script>
+	
+	<script type="text/javascript">
+		glow.ready(function() {
+			new glow.embed.Flash("smile.swf", "#flash1", "6", {
+				width: 32,
+				height: 32,
+				params: {
+					wmode: 'transparent'
+				}
+			}).embed();
+			new glow.embed.Flash("smile.swf", "#flash2", "6", {
+				width: 32,
+				height: 32
+			}).embed();
+			new glow.embed.Flash("smile.swf", "#flash3", "6", {
+				width: 32,
+				height: 32
+			}).embed();
+		});
+	</script>
+	
+	<script type="text/javascript" class="showSrc">
+		glow.ready(function() {
+			window.overlay1 = new glow.widgets.Overlay('#overlay1', {
+				x: '100%',
+				y: '100%',
+				hideWhileShown: 'span.elmToHide',
+				hideFilter: function() {
+					// if the element has class 'dontHide' then don't hide it
+					return !glow.dom.get(this).hasClass('dontHide');
+				}
+			});
+			glow.events.addListener('#toggleOverlay1', 'click', function() {
+				if (overlay1.isShown) {
+					overlay1.hide();
+				} else {
+					overlay1.show();
+				}
+			});
+			glow.events.addListener(overlay1, 'show', function() {
+				manualTests.log('overlay1: show');
+			});
+			glow.events.addListener(overlay1, 'hide', function() {
+				manualTests.log('overlay1: hide');
+			});
+			glow.events.addListener(overlay1, 'afterShow', function() {
+				manualTests.log('overlay1: afterShow');
+			});
+			glow.events.addListener(overlay1, 'afterHide', function() {
+				manualTests.log('overlay1: afterHide');
+			});
+		});
+	</script>
+	
+	<script type="text/javascript">manualTests.showSrc();</script>
+	<script type="text/javascript">manualTests.log('Logging enabled');</script>
 </body>
 </html>
